[package]
name = "yuzu-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clap = { version = "3.2.5", features = ["derive"] }
which = "4.2.5"
tempdir = "0.3.7"
regex = "1.5.6"