[package]
name = "cargo-horizon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clap = { version = "3.2.5", features = ["derive"] }
which = "4.2.5"
tempdir = "0.3.7"
regex = "1.5.6"
cargo_metadata = "0.14.2"
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"] }
config = "0.13.1"
serde_yaml = "0.8.24"
dirs = "4.0.0"
linkle = "0.2.11"